--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  font-family: "Nunito", sans-serif;
+  padding: 3.5rem 0;
+  height: 100vh;
+  min-height: 100vh;
+  background: rgb(255, 236, 240);
+  background: linear-gradient(
+    170deg,
+    rgba(192, 228, 236, 1) 0%,
+    rgba(255, 236, 240, 1) 52%,
+    rgba(231, 255, 245, 1) 100%
+    
+  );
+  overflow: scroll;
 }
